samples/_failures_safe/1761528210_324f1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47af1b5b.c: In function ‘simulate_data_write’:
./samples/SAFE/__tmp_47af1b5b.c:172:5: error: expected expression at end of input
  172 |     if (ctx ==
      |     ^~
./samples/SAFE/__tmp_47af1b5b.c:172:5: error: expected declaration or statement at end of input
